Completed (1) Main feature: Song Rating (2) Medium Feature: Serilogging

--- a/Client/Pages/AddSong.razor
+++ b/Client/Pages/AddSong.razor
@@ -40,7 +40,7 @@
 
 @code {
     private Song newSong = new Song();
-    private string message;
+    private string? message;
 
     private async Task HandleValidSubmit()
     {
